force-app/main/default/objects/Collection_Occasion__c/Collection_Occasion__c.object-meta.xml
<CustomObject>
    <description>A Collection Occasion is defined as an occasion during an Episode of Care when specific Service Activities are required to be collected. At a minimum, collection is required at both Episode Start and Episode End, but may be more frequent if clinically indicated and agreed by the client.</description>
    <label>Collection Occasion</label>
    <nameField>
        <label>Collection Occasion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Occasions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>