force-app/main/default/objects/Collection_Occasion__c/fields/Collection_Occasion_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Occasion_Date__c</fullName>
    <description>The date of the collection occasion.</description>
    <label>Collection Occasion Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>