force-app/main/default/objects/Collection_Occasion__c/fields/Collection_Occasion_Key__c.field-meta.xml
<CustomField>
    <fullName>Collection_Occasion_Key__c</fullName>
    <description>This is a number or code assigned to each collection occasion of service activities. The Collection Occasion Key is unique and stable for each collection occasion at the level of the organisation.</description>
    <label>Collection Occasion Key</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>