force-app/main/default/objects/Collection_Occasion__c/fields/Collection_Occasion_Tags__c.field-meta.xml
<CustomField>
    <fullName>Collection_Occasion_Tags__c</fullName>
    <description>List of tags for the collection occasion.</description>
    <label>Collection Occasion Tags</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>