force-app/main/default/objects/Collection_Occasion__c/fields/Organisation_Path__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Path__c</fullName>
    <description>A sequence of colon separated Organisation Keys that fully specifies the Provider Organisation providing a service to the client.</description>
    <label>Organisation Path</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>